public/lite/api/zh-CN/r2.0.0-alpha/_sources/generate/file_include_converter_include_registry_converter_context.h.rst.txt
:gitee_url: https://gitee.com/mindspore/docs


.. _file_include_converter_include_registry_converter_context.h:

File converter_context.h
========================

|exhale_lsh| :ref:`Parent directory <dir_include_converter_include_registry>` (``include/converter/include/registry``)

.. |exhale_lsh| unicode:: U+021B0 .. UPWARDS ARROW WITH TIP LEFTWARDS
Definition (``include/converter/include/registry/converter_context.h``)
-----------------------------------------------------------------------


.. toctree::
   :maxdepth: 1

   program_listing_file_include_converter_include_registry_converter_context.h.rst





Includes
--------


- ``include/api/dual_abi_helper.h`` (:ref:`file_include_runtime_include_api_dual_abi_helper.h`)

- ``include/api/types.h`` (:ref:`file_include_runtime_include_api_types.h`)

- ``map`` (:ref:`file_include_converter_include_core_utils_hash_map.h`)

- ``string``

- ``vector`` (:ref:`file_include_converter_include_core_mindapi_base_shape_vector.h`)



Included By
-----------


- :ref:`file_include_converter_include_converter.h`

- :ref:`file_include_converter_include_registry_model_parser.h`

- :ref:`file_include_converter_include_registry_model_parser_registry.h`

- :ref:`file_include_converter_include_registry_node_parser.h`




Namespaces
----------


- :ref:`namespace_mindspore`

- :ref:`namespace_mindspore__converter`


Classes
-------


- :ref:`exhale_struct_structmindspore_converter_ConverterParameters`

- :ref:`exhale_class_classmindspore_converter_ConverterContext`


Enums
-----


- :ref:`exhale_enum_mindspore_converter_FmkType-1`


Variables
---------


- :ref:`exhale_variable_mindspore_converter_KCommonQuantParam-1`

- :ref:`exhale_variable_mindspore_converter_KConverterParam-1`

- :ref:`exhale_variable_mindspore_converter_KDataPreProcess-1`

- :ref:`exhale_variable_mindspore_converter_KFullQuantParam-1`

- :ref:`exhale_variable_mindspore_converter_KMixBitWeightQuantParam-1`

